# OctoPod

./: .gitignore  COLAB_SETUP.md  Dockerfile  OctoPod.ipynb  colab_fetch_transcripts.ipynb  config.yaml  pyproject.toml  run_cloud.py
.claude/: settings.local.json
.github/workflows/: daily.yml
config/: betting.yaml  channels.json  draft-fpl.yaml  main-fpl.yaml  models.json  prompts.json  schedules.json
data/: analyses.json  videos.json
data/fpl_draft/: videos.json
data/fpl_main/: videos.json
data/octopod/betting/: 2026-02-20_053140.json  2026-02-20_135019.json  2026-02-20_184935.json  latest.json
data/octopod/fpl_draft/: 2026-02-19_193824.json  2026-02-21_122603.json
data/octopod/fpl_main/: 2026-02-20_053140.json  2026-02-20_135019.json  2026-02-20_184935.json  2026-02-21_122603.json  latest.json
data/octopod/politics/: 2026-02-19_193824.json
data/politics/: videos.json
data/summaries/: gw26.json
octopod/: __init__.py  analyzer.py  channels.py  cli.py  config.py  data.py  database.py  fpl.py  gcs.py  schedule.py  summarizer.py  transcripts.py
