[project]
name = "octopod"
version = "0.1.0"
description = "FPL Draft Podcast Analyzer - Download and analyze YouTube transcripts for player insights"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "youtube-transcript-api>=0.6.0",
    "feedparser>=6.0.0",
    "anthropic>=0.40.0",
    "rich>=13.0.0",
    "python-dateutil>=2.8.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
octopod = "octopod.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["octopod"]
